Fix site nav current marker header border overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -158,7 +158,7 @@ img {
   content: '';
 
   position: absolute;
-  bottom: 0;
+  bottom: -1px;
 
   display: block;
   width: 100%;
